# qic1832_sdk_linux

./: Makefile.am  Makefile.in  README.md  README.txt  config.h.in  configure  configure.in
qic_api/qic_include/: demux_h264.h  demux_vp8.h  qic_api_common_define.h  qic_api_fw_update.h  qic_api_md.h  qic_api_misc.h  qic_api_osd.h  qic_api_stream.h  qic_api_v4l2_ctpu.h  qic_api_video.h  qic_cfg.h  qic_control.h  qic_include_all.h  qic_utility_for_demo.h  qic_xuctrl.h
qic_api/qic_src/: H264Enum.c  demux.c  demux_h264.c  demux_vp8.c  mdparse.c  qic_api_common_define.c  qic_api_fw_update.c  qic_api_md.c  qic_api_misc.c  qic_api_osd.c  qic_api_stream.c  qic_api_v4l2_ctpu.c  qic_api_video.c  qic_control.c  qic_utility_for_demo.c  qic_xuctrl.c  vp8demux.c
qic_example/: Makefile  Makefile.am  Makefile.in  avc_only.c  avc_simulcast.c  avc_simulcast_for_1920x1080_all_I_frame.c  avc_two_way.c  build_cl1860.sh  build_cl1870.sh  build_mt7620.sh  config.h  config.status  configure  configure.in  example_avconly.c  example_control.c  example_control.c.mine  example_fw_check.c  example_fw_update.c  example_mjpgonly.c  example_vp8only.c  example_yuvonly.c  fw_check.c  fw_downloader.c  install-sh  libbuild.sh  make_output.txt  misc_system.c  misc_system.h  misc_writefile.c  misc_writefile.h  misc_writefile_simulcast.c  misc_writefile_simulcast.h  mjpg_only.c  simulcast_writefile.c  simulcast_writefile.h  test_drs.sh  vp8_only.c  vp8_simulcast.c  vp8_two_way.c  (+1 more)
qic_example/.deps/: avc_only-avc_only.Po  avc_only-misc_writefile.Po  avc_simulcast-avc_simulcast.Po  avc_simulcast-misc_system.Po  avc_simulcast-misc_writefile_simulcast.Po  avc_simulcast-simulcast_writefile.Po  avc_two_way-avc_two_way.Po  avc_two_way-misc_system.Po  avc_two_way-misc_writefile.Po  example_avc-example_avconly.Po  example_avc-misc_system.Po  example_avc-misc_writefile.Po  example_control-example_control.Po  example_control-misc_system.Po  example_fw_check-example_fw_check.Po  example_fw_update-example_fw_update.Po  example_mjpg-example_mjpgonly.Po  example_mjpg-misc_system.Po  example_mjpg-misc_writefile.Po  example_vp8-example_vp8only.Po  example_vp8-misc_system.Po  example_vp8-misc_writefile.Po  example_yuv-example_yuvonly.Po  example_yuv-misc_system.Po  example_yuv-misc_writefile.Po  fw_check-fw_check.Po  fw_check-misc_system.Po  fw_downloader-fw_downloader.Po  fw_downloader-misc_system.Po  libqic_a-demux_h264.Po  libqic_a-demux_vp8.Po  libqic_a-qic_api_common_define.Po  libqic_a-qic_api_file_write.Po  libqic_a-qic_api_fw_update.Po  libqic_a-qic_api_md.Po  libqic_a-qic_api_misc.Po  libqic_a-qic_api_osd.Po  libqic_a-qic_api_stream.Po  libqic_a-qic_api_v4l2_ctpu.Po  libqic_a-qic_api_video.Po  (+47 more)
qic_example/autom4te.cache/: output.1  output.3  traces.0  traces.2  traces.3
qic_example/test_script/: example_control  test_ir.sh
